--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,12 +27,31 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.android.support:cardview-v7:24.2.1'
     testCompile 'junit:junit:4.12'
     compile files('libs/ksoap2-android-assembly-2.3-jar-with-dependencies.jar')
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.android.support:recyclerview-v7:24.2.1'
-    compile 'com.android.support:cardview-v7:24.2.1'
+
+    // your app's other dependencies
+    compile 'com.facebook.fresco:fresco:1.0.1'
+
+    // If your app supports Android versions before Ice Cream Sandwich (API level 14)
+    compile 'com.facebook.fresco:animated-base-support:1.0.1'
+
+    // For animated GIF support
+    compile 'com.facebook.fresco:animated-gif:1.0.1'
+
+    // For WebP support, including animated WebP
+    compile 'com.facebook.fresco:animated-webp:1.0.1'
+    compile 'com.facebook.fresco:webpsupport:1.0.1'
+
+    // For WebP support, without animations
+    compile 'com.facebook.fresco:webpsupport:1.0.1'
+
+    // Provide the Android support library (you might already have this or a similar dependency)
+    compile 'com.android.support:support-core-utils:24.2.1'
 
 }
